Add queens release notes links
Change-Id: Idf52b7022e8a8b67d4fd4d735ab28f7e7e04f4df

--- a/deliverables/queens/heat-dashboard.yaml
+++ b/deliverables/queens/heat-dashboard.yaml
@@ -21,3 +21,4 @@ branches:
     location: 1.0.2
 repository-settings:
   openstack/heat-dashboard: {}
+release-notes: https://docs.openstack.org/releasenotes/heat-dashboard/queens.html
