--- a/deliverables/queens/keystone.yaml
+++ b/deliverables/queens/keystone.yaml
@@ -40,3 +40,4 @@ cycle-highlights:
     for more information.
 repository-settings:
   openstack/keystone: {}
+release-notes: https://docs.openstack.org/releasenotes/keystone/queens.html
