--- a/deliverables/queens/magnum-ui.yaml
+++ b/deliverables/queens/magnum-ui.yaml
@@ -13,3 +13,4 @@ releases:
     version: 4.0.0
 repository-settings:
   openstack/magnum-ui: {}
+release-notes: https://docs.openstack.org/releasenotes/magnum-ui/queens.html
