--- a/deliverables/queens/networking-baremetal.yaml
+++ b/deliverables/queens/networking-baremetal.yaml
@@ -14,3 +14,4 @@ branches:
     name: stable/queens
 repository-settings:
   openstack/networking-baremetal: {}
+release-notes: https://docs.openstack.org/releasenotes/networking-baremetal/queens.html
