--- a/deliverables/queens/octavia.yaml
+++ b/deliverables/queens/octavia.yaml
@@ -32,9 +32,8 @@ branches:
     name: stable/queens
 cycle-highlights:
   - 'Added the ability to batch update pool members.'
-  - 'A Neutron Quality of Service (QoS) policy can now be applied to Octavia
-    load balancers.'
-  - 'Octavia now supports using Castellan and PKCS12 bundles for TLS
-    termination.'
+  - 'A Neutron Quality of Service (QoS) policy can now be applied to Octavia load
+    balancers.'
+  - 'Octavia now supports using Castellan and PKCS12 bundles for TLS termination.'
 repository-settings:
   openstack/octavia: {}
