--- a/deliverables/queens/paunch.yaml
+++ b/deliverables/queens/paunch.yaml
@@ -19,3 +19,4 @@ releases:
     version: 2.2.0
 repository-settings:
   openstack/paunch: {}
+release-notes: https://docs.openstack.org/releasenotes/paunch/queens.html
