--- a/deliverables/queens/puppet-rally.yaml
+++ b/deliverables/queens/puppet-rally.yaml
@@ -13,3 +13,4 @@ repository-settings:
 branches:
   - location: 0.1.0
     name: stable/queens
+release-notes: https://docs.openstack.org/releasenotes/puppet-rally/queens.html
