--- a/deliverables/queens/python-vitrageclient.yaml
+++ b/deliverables/queens/python-vitrageclient.yaml
@@ -16,7 +16,7 @@ release-notes: https://docs.openstack.org/releasenotes/python-vitrageclient/quee
 repository-settings:
   openstack/python-vitrageclient: {}
 cycle-highlights:
-  - New API for template management (add/delete template) allows users to
-    change the alarm deduction and RCA rules more easily. The new rules are
-    immediately applied on existing resources and alarms.
-  - New API for webhook registration on Vitrage alarms.
+  - 'New API for template management (add/delete template) allows users to change
+    the alarm deduction and RCA rules more easily. The new rules are immediately applied
+    on existing resources and alarms.'
+  - 'New API for webhook registration on Vitrage alarms.'
