--- a/deliverables/queens/searchlight-ui.yaml
+++ b/deliverables/queens/searchlight-ui.yaml
@@ -25,3 +25,4 @@ branches:
     name: stable/queens
 repository-settings:
   openstack/searchlight-ui: {}
+release-notes: https://docs.openstack.org/releasenotes/searchlight-ui/queens.html
