--- a/deliverables/queens/searchlight.yaml
+++ b/deliverables/queens/searchlight.yaml
@@ -21,3 +21,4 @@ branches:
     name: stable/queens
 repository-settings:
   openstack/searchlight: {}
+release-notes: https://docs.openstack.org/releasenotes/searchlight/queens.html
