--- a/deliverables/queens/senlin.yaml
+++ b/deliverables/queens/senlin.yaml
@@ -21,3 +21,4 @@ branches:
     name: stable/queens
 repository-settings:
   openstack/senlin: {}
+release-notes: https://docs.openstack.org/releasenotes/senlin/queens.html
