--- a/deliverables/queens/vitrage.yaml
+++ b/deliverables/queens/vitrage.yaml
@@ -23,8 +23,7 @@ repository-settings:
   openstack/vitrage: {}
 release-notes: https://docs.openstack.org/releasenotes/vitrage/queens.html
 cycle-highlights:
-  - Introduced template version 2 including several enhancements like regex
-    support, templates that contain only topoology definitions and template
-    functions
-  - Several performance improvements, mostly around parallel evaluation of
-    Vitrage templates
+  - 'Introduced template version 2 including several enhancements like regex support,
+    templates that contain only topoology definitions and template functions'
+  - 'Several performance improvements, mostly around parallel evaluation of Vitrage
+    templates'
