--- a/deliverables/queens/zaqar-ui.yaml
+++ b/deliverables/queens/zaqar-ui.yaml
@@ -26,3 +26,4 @@ branches:
     name: stable/queens
 repository-settings:
   openstack/zaqar-ui: {}
+release-notes: https://docs.openstack.org/releasenotes/zaqar-ui/queens.html
