--- a/deliverables/queens/zaqar.yaml
+++ b/deliverables/queens/zaqar.yaml
@@ -25,3 +25,4 @@ branches:
     name: stable/queens
 repository-settings:
   openstack/zaqar: {}
+release-notes: https://docs.openstack.org/releasenotes/zaqar/queens.html
