--- a/deliverables/queens/blazar-dashboard.yaml
+++ b/deliverables/queens/blazar-dashboard.yaml
@@ -14,3 +14,4 @@ repository-settings:
 branches:
   - location: 1.0.0
     name: stable/queens
+release-notes: https://docs.openstack.org/releasenotes/blazar-dashboard/queens.html
