--- a/deliverables/queens/cinder.yaml
+++ b/deliverables/queens/cinder.yaml
@@ -36,3 +36,4 @@ repository-settings:
 branches:
   - location: 12.0.0.0rc1
     name: stable/queens
+release-notes: https://docs.openstack.org/releasenotes/cinder/queens.html
