--- a/deliverables/queens/congress.yaml
+++ b/deliverables/queens/congress.yaml
@@ -29,3 +29,4 @@ repository-settings:
 branches:
   - location: 7.0.0.0rc1
     name: stable/queens
+release-notes: https://docs.openstack.org/releasenotes/congress/queens.html
