--- a/deliverables/queens/ironic-ui.yaml
+++ b/deliverables/queens/ironic-ui.yaml
@@ -18,3 +18,4 @@ branches:
     location: 3.1.0
 repository-settings:
   openstack/ironic-ui: {}
+release-notes: https://docs.openstack.org/releasenotes/ironic-ui/queens.html
