--- a/deliverables/queens/manila-ui.yaml
+++ b/deliverables/queens/manila-ui.yaml
@@ -22,3 +22,4 @@ repository-settings:
 branches:
   - location: 2.13.0
     name: stable/queens
+release-notes: https://docs.openstack.org/releasenotes/manila-ui/queens.html
