--- a/deliverables/queens/mistral.yaml
+++ b/deliverables/queens/mistral.yaml
@@ -44,3 +44,4 @@ repository-settings:
 branches:
   - location: 6.0.0.0rc1
     name: stable/queens
+release-notes: https://docs.openstack.org/releasenotes/mistral/queens.html
