--- a/deliverables/queens/networking-hyperv.yaml
+++ b/deliverables/queens/networking-hyperv.yaml
@@ -14,3 +14,4 @@ repository-settings:
 branches:
   - location: 6.0.0
     name: stable/queens
+release-notes: https://docs.openstack.org/releasenotes/networking-hyperv/queens.html
