--- a/deliverables/queens/octavia-dashboard.yaml
+++ b/deliverables/queens/octavia-dashboard.yaml
@@ -31,8 +31,8 @@ branches:
   - location: 1.0.0.0rc1
     name: stable/queens
 cycle-highlights:
-  - 'The initial release of the Octavia dashboard for Horizon includes
-    significantly improved load balancer detail pages and workflows compared
-    to the, now deprecated, neutron-lbaas-dashboard.'
+  - 'The initial release of the Octavia dashboard for Horizon includes significantly
+    improved load balancer detail pages and workflows compared to the, now deprecated,
+    neutron-lbaas-dashboard.'
 repository-settings:
   openstack/octavia-dashboard: {}
