--- a/deliverables/queens/puppet-ceilometer.yaml
+++ b/deliverables/queens/puppet-ceilometer.yaml
@@ -29,3 +29,4 @@ repository-settings:
 branches:
   - location: 12.4.0
     name: stable/queens
+release-notes: https://docs.openstack.org/releasenotes/puppet-ceilometer/queens.html
