--- a/deliverables/queens/puppet-cloudkitty.yaml
+++ b/deliverables/queens/puppet-cloudkitty.yaml
@@ -13,3 +13,4 @@ repository-settings:
 branches:
   - location: 1.0.0
     name: stable/queens
+release-notes: https://docs.openstack.org/releasenotes/puppet-cloudkitty/queens.html
