--- a/deliverables/queens/puppet-glare.yaml
+++ b/deliverables/queens/puppet-glare.yaml
@@ -13,3 +13,4 @@ repository-settings:
 branches:
   - location: 1.0.0
     name: stable/queens
+release-notes: https://docs.openstack.org/releasenotes/puppet-glare/queens.html
