--- a/deliverables/queens/puppet-magnum.yaml
+++ b/deliverables/queens/puppet-magnum.yaml
@@ -29,3 +29,4 @@ repository-settings:
 branches:
   - location: 12.2.0
     name: stable/queens
+release-notes: https://docs.openstack.org/releasenotes/puppet-magnum/queens.html
