--- a/deliverables/queens/puppet-vitrage.yaml
+++ b/deliverables/queens/puppet-vitrage.yaml
@@ -25,3 +25,4 @@ repository-settings:
 branches:
   - location: 2.3.0
     name: stable/queens
+release-notes: https://docs.openstack.org/releasenotes/puppet-vitrage/queens.html
