--- a/deliverables/queens/puppet-vswitch.yaml
+++ b/deliverables/queens/puppet-vswitch.yaml
@@ -25,3 +25,4 @@ repository-settings:
 branches:
   - location: 8.3.0
     name: stable/queens
+release-notes: https://docs.openstack.org/releasenotes/puppet-vswitch/queens.html
