--- a/deliverables/queens/puppet-watcher.yaml
+++ b/deliverables/queens/puppet-watcher.yaml
@@ -25,3 +25,4 @@ repository-settings:
 branches:
   - location: 12.3.0
     name: stable/queens
+release-notes: https://docs.openstack.org/releasenotes/puppet-watcher/queens.html
