--- a/deliverables/queens/python-zaqarclient.yaml
+++ b/deliverables/queens/python-zaqarclient.yaml
@@ -18,3 +18,4 @@ branches:
     location: 1.9.0
 repository-settings:
   openstack/python-zaqarclient: {}
+release-notes: https://docs.openstack.org/releasenotes/python-zaqarclient/queens.html
