--- a/deliverables/queens/senlin-dashboard.yaml
+++ b/deliverables/queens/senlin-dashboard.yaml
@@ -14,3 +14,4 @@ repository-settings:
 branches:
   - location: 0.8.0
     name: stable/queens
+release-notes: https://docs.openstack.org/releasenotes/senlin-dashboard/queens.html
