--- a/deliverables/queens/vitrage-dashboard.yaml
+++ b/deliverables/queens/vitrage-dashboard.yaml
@@ -23,4 +23,4 @@ repository-settings:
   openstack/vitrage-dashboard: {}
 release-notes: https://docs.openstack.org/releasenotes/vitrage-dashboard/queens.html
 cycle-highlights:
-  - Added an alarm count banner in Horizon
+  - 'Added an alarm count banner in Horizon'
