--- a/deliverables/queens/congress-dashboard.yaml
+++ b/deliverables/queens/congress-dashboard.yaml
@@ -17,6 +17,11 @@ releases:
     projects:
       - repo: openstack/congress-dashboard
         hash: 247f4d70b3b471dc26c1e4a047e8e3a5610eb9b7
+  - diff-start: 1.0.0
+    projects:
+      - repo: openstack/congress-dashboard
+        hash: 247f4d70b3b471dc26c1e4a047e8e3a5610eb9b7
+    version: 2.0.0
 repository-settings:
   openstack/congress-dashboard: {}
 branches:
