--- a/deliverables/queens/congress.yaml
+++ b/deliverables/queens/congress.yaml
@@ -24,6 +24,11 @@ releases:
     projects:
       - repo: openstack/congress
         hash: f26f54774f598fa41d6fb0b8b01054330b5aee31
+  - diff-start: 6.0.0
+    projects:
+      - repo: openstack/congress
+        hash: f26f54774f598fa41d6fb0b8b01054330b5aee31
+    version: 7.0.0
 repository-settings:
   openstack/congress: {}
 branches:
