--- a/deliverables/queens/murano-dashboard.yaml
+++ b/deliverables/queens/murano-dashboard.yaml
@@ -25,6 +25,11 @@ releases:
     projects:
       - repo: openstack/murano-dashboard
         hash: 75b3caa722231a4a9b386e53145e260679cf5c78
+  - diff-start: 4.0.0.0rc1
+    projects:
+      - repo: openstack/murano-dashboard
+        hash: 75b3caa722231a4a9b386e53145e260679cf5c78
+    version: 5.0.0
 repository-settings:
   openstack/murano-dashboard: {}
 branches:
