--- a/deliverables/queens/murano.yaml
+++ b/deliverables/queens/murano.yaml
@@ -24,6 +24,11 @@ releases:
     projects:
       - repo: openstack/murano
         hash: de3b3e9d32539a0c29141da3a92e561852bf1656
+  - diff-start: 4.0.0.0rc1
+    projects:
+      - repo: openstack/murano
+        hash: de3b3e9d32539a0c29141da3a92e561852bf1656
+    version: 5.0.0
 repository-settings:
   openstack/murano: {}
 branches:
