--- a/deliverables/queens/networking-bagpipe.yaml
+++ b/deliverables/queens/networking-bagpipe.yaml
@@ -21,6 +21,11 @@ releases:
       - hash: 81589f55f2a9fa7bf3bf39d4318c68a868cc75cf
         repo: openstack/networking-bagpipe
     version: 8.0.0.0rc1
+  - diff-start: 7.0.0.0rc1
+    projects:
+      - hash: 81589f55f2a9fa7bf3bf39d4318c68a868cc75cf
+        repo: openstack/networking-bagpipe
+    version: 8.0.0
 repository-settings:
   openstack/networking-bagpipe: {}
 branches:
