--- a/deliverables/queens/networking-bgpvpn.yaml
+++ b/deliverables/queens/networking-bgpvpn.yaml
@@ -21,6 +21,11 @@ releases:
       - hash: cc671c8871a896d09f598235741f7f938b9f4b8f
         repo: openstack/networking-bgpvpn
     version: 8.0.0.0rc1
+  - diff-start: 7.0.0.0rc1
+    projects:
+      - hash: cc671c8871a896d09f598235741f7f938b9f4b8f
+        repo: openstack/networking-bgpvpn
+    version: 8.0.0
 repository-settings:
   openstack/networking-bgpvpn: {}
 branches:
