--- a/deliverables/queens/networking-odl.yaml
+++ b/deliverables/queens/networking-odl.yaml
@@ -22,6 +22,11 @@ releases:
       - hash: ff80c7decc196cae5d7940aabbf14e5c37a94335
         repo: openstack/networking-odl
     version: 12.0.0.0rc1
+  - diff-start: 11.0.0.0rc1
+    projects:
+      - hash: ff80c7decc196cae5d7940aabbf14e5c37a94335
+        repo: openstack/networking-odl
+    version: 12.0.0
 repository-settings:
   openstack/networking-odl: {}
 branches:
