--- a/deliverables/queens/networking-ovn.yaml
+++ b/deliverables/queens/networking-ovn.yaml
@@ -26,6 +26,11 @@ releases:
       - hash: 329d6d85b308f1199d521d5efdef49492edb8864
         repo: openstack/networking-ovn
     version: 4.0.0.0rc2
+  - diff-start: 3.0.0.0rc1
+    projects:
+      - hash: 329d6d85b308f1199d521d5efdef49492edb8864
+        repo: openstack/networking-ovn
+    version: 4.0.0
 repository-settings:
   openstack/networking-ovn: {}
 branches:
