--- a/deliverables/queens/searchlight.yaml
+++ b/deliverables/queens/searchlight.yaml
@@ -16,6 +16,11 @@ releases:
     projects:
       - repo: openstack/searchlight
         hash: 49642e0dae1b0c2f22ae9136be6ad9a36ecdcaab
+  - diff-start: 3.0.0
+    projects:
+      - repo: openstack/searchlight
+        hash: 49642e0dae1b0c2f22ae9136be6ad9a36ecdcaab
+    version: 4.0.0
 branches:
   - location: 4.0.0.0rc1
     name: stable/queens
