--- a/deliverables/queens/trove-dashboard.yaml
+++ b/deliverables/queens/trove-dashboard.yaml
@@ -16,6 +16,11 @@ releases:
       - hash: bd33e730f52889a6979e7d751e6732ce06806774
         repo: openstack/trove-dashboard
     version: 10.0.0.0rc1
+  - diff-start: 9.0.0
+    projects:
+      - hash: bd33e730f52889a6979e7d751e6732ce06806774
+        repo: openstack/trove-dashboard
+    version: 10.0.0
 repository-settings:
   openstack/trove-dashboard: {}
 branches:
