--- a/deliverables/queens/trove.yaml
+++ b/deliverables/queens/trove.yaml
@@ -16,6 +16,11 @@ releases:
       - hash: 9e5186b95bba51d911a0de9e6d6bd412c478aef4
         repo: openstack/trove
     version: 9.0.0.0rc1
+  - diff-start: 8.0.0
+    projects:
+      - hash: 9e5186b95bba51d911a0de9e6d6bd412c478aef4
+        repo: openstack/trove
+    version: 9.0.0
 repository-settings:
   openstack/trove: {}
 branches:
