--- a/deliverables/queens/barbican.yaml
+++ b/deliverables/queens/barbican.yaml
@@ -20,6 +20,11 @@ releases:
       - hash: 5b525f6b0a7cf5342a9ffa3ca3618028d6d53649
         repo: openstack/barbican
     version: 6.0.0.0rc1
+  - diff-start: 5.0.0
+    projects:
+      - hash: 5b525f6b0a7cf5342a9ffa3ca3618028d6d53649
+        repo: openstack/barbican
+    version: 6.0.0
 repository-settings:
   openstack/barbican: {}
 branches:
