--- a/deliverables/queens/blazar.yaml
+++ b/deliverables/queens/blazar.yaml
@@ -17,6 +17,11 @@ releases:
     projects:
       - repo: openstack/blazar
         hash: a72e60dc3417f7c486eb2af04a0f0b66d03eebb4
+  - diff-start: 0.2.0
+    projects:
+      - repo: openstack/blazar
+        hash: a72e60dc3417f7c486eb2af04a0f0b66d03eebb4
+    version: 1.0.0
 branches:
   - location: 1.0.0.0rc1
     name: stable/queens
