--- a/deliverables/queens/ceilometer-powervm.yaml
+++ b/deliverables/queens/ceilometer-powervm.yaml
@@ -23,5 +23,10 @@ releases:
       - repo: openstack/ceilometer-powervm
         hash: a31d0fa44ac64e6168e86956c6ba17dcdae2dfd3
     version: 6.0.0.0rc1
+  - diff-start: 5.0.0.0rc1
+    projects:
+      - repo: openstack/ceilometer-powervm
+        hash: a31d0fa44ac64e6168e86956c6ba17dcdae2dfd3
+    version: 6.0.0
 repository-settings:
   openstack/ceilometer-powervm: {}
