--- a/deliverables/queens/designate-dashboard.yaml
+++ b/deliverables/queens/designate-dashboard.yaml
@@ -25,6 +25,11 @@ releases:
     projects:
       - repo: openstack/designate-dashboard
         hash: 697adb82e62b8fa1101d7923c27ff4fc30cbcb77
+  - diff-start: 5.0.0
+    projects:
+      - repo: openstack/designate-dashboard
+        hash: 697adb82e62b8fa1101d7923c27ff4fc30cbcb77
+    version: 6.0.0
 branches:
   - location: 6.0.0.0rc1
     name: stable/queens
