--- a/deliverables/queens/horizon.yaml
+++ b/deliverables/queens/horizon.yaml
@@ -24,6 +24,11 @@ releases:
     projects:
       - repo: openstack/horizon
         hash: a6cdd290d0dbe6f6622179cefd4d2c05d60dc22d
+  - diff-start: 12.0.0.0rc1
+    projects:
+      - repo: openstack/horizon
+        hash: a6cdd290d0dbe6f6622179cefd4d2c05d60dc22d
+    version: 13.0.0
 branches:
   - location: 13.0.0.0rc1
     name: stable/queens
