--- a/deliverables/queens/networking-sfc.yaml
+++ b/deliverables/queens/networking-sfc.yaml
@@ -22,6 +22,11 @@ releases:
       - hash: 931f5e435014b14e41614d067c1f115ff6be68aa
         repo: openstack/networking-sfc
     version: 6.0.0.0rc1
+  - diff-start: 5.0.0.0rc1
+    projects:
+      - hash: 931f5e435014b14e41614d067c1f115ff6be68aa
+        repo: openstack/networking-sfc
+    version: 6.0.0
 repository-settings:
   openstack/networking-sfc: {}
 branches:
