--- a/deliverables/queens/neutron-dynamic-routing.yaml
+++ b/deliverables/queens/neutron-dynamic-routing.yaml
@@ -25,6 +25,11 @@ releases:
       - hash: 5f53893e50c602f8a29aefe6efc29957f0cc4816
         repo: openstack/neutron-dynamic-routing
     version: 12.0.0.0rc2
+  - diff-start: 11.0.0.0rc1
+    projects:
+      - hash: 5f53893e50c602f8a29aefe6efc29957f0cc4816
+        repo: openstack/neutron-dynamic-routing
+    version: 12.0.0
 repository-settings:
   openstack/neutron-dynamic-routing: {}
 branches:
