--- a/deliverables/queens/neutron.yaml
+++ b/deliverables/queens/neutron.yaml
@@ -24,6 +24,11 @@ releases:
       - hash: fb3f71806174bc2fae7e421268aeee61be36412d
         repo: openstack/neutron
     version: 12.0.0.0rc2
+  - diff-start: 11.0.0.0rc1
+    projects:
+      - hash: fb3f71806174bc2fae7e421268aeee61be36412d
+        repo: openstack/neutron
+    version: 12.0.0
 repository-settings:
   openstack/neutron: {}
 branches:
