--- a/deliverables/queens/octavia-dashboard.yaml
+++ b/deliverables/queens/octavia-dashboard.yaml
@@ -27,6 +27,10 @@ releases:
       - hash: 03666efc505b931c3f0b7473dd18782548c13da8
         repo: openstack/octavia-dashboard
     version: 1.0.0.0rc2
+  - projects:
+      - hash: 03666efc505b931c3f0b7473dd18782548c13da8
+        repo: openstack/octavia-dashboard
+    version: 1.0.0
 branches:
   - location: 1.0.0.0rc1
     name: stable/queens
