--- a/deliverables/queens/sahara-image-elements.yaml
+++ b/deliverables/queens/sahara-image-elements.yaml
@@ -21,6 +21,11 @@ releases:
     projects:
       - repo: openstack/sahara-image-elements
         hash: 8a9185373f92ab3ac201fdff725b45cf7f01f553
+  - diff-start: 7.0.0.0rc1
+    projects:
+      - repo: openstack/sahara-image-elements
+        hash: 8a9185373f92ab3ac201fdff725b45cf7f01f553
+    version: 8.0.0
 branches:
   - name: stable/queens
     location: 8.0.0.0rc1
