--- a/deliverables/queens/sahara.yaml
+++ b/deliverables/queens/sahara.yaml
@@ -20,6 +20,11 @@ releases:
     projects:
       - repo: openstack/sahara
         hash: fbd7abb754318e1633d19409e2e5eaad74282801
+  - diff-start: 7.0.0.0rc1
+    projects:
+      - repo: openstack/sahara
+        hash: fbd7abb754318e1633d19409e2e5eaad74282801
+    version: 8.0.0
 branches:
   - name: stable/queens
     location: 8.0.0.0rc1
