--- a/deliverables/queens/zaqar-ui.yaml
+++ b/deliverables/queens/zaqar-ui.yaml
@@ -21,6 +21,11 @@ releases:
     projects:
       - repo: openstack/zaqar-ui
         hash: ffa0c5d512ff49698a53e491aa9e7747d92930f2
+  - diff-start: 3.0.0
+    projects:
+      - repo: openstack/zaqar-ui
+        hash: ffa0c5d512ff49698a53e491aa9e7747d92930f2
+    version: 4.0.0
 branches:
   - location: 4.0.0.0rc1
     name: stable/queens
