Senlin queens release
Change-Id: I595a15257dbff7cfbc7a48dff3acfb90c26b4d28

--- a/deliverables/queens/senlin.yaml
+++ b/deliverables/queens/senlin.yaml
@@ -21,6 +21,10 @@ releases:
       - hash: 7f83d7995d1b19274b64aabc383c1cee68f33f17
         repo: openstack/senlin
     version: 5.0.0
+  - projects:
+      - hash: c08609c2a69380fb84ad98f92ca354e376d42472
+        repo: openstack/senlin
+    version: 5.0.1
 branches:
   - location: 5.0.0.0rc1
     name: stable/queens
