ceilometer 8.1.4 (ocata-eol)
Change-Id: I28258ca8094fb32e7ef84f54d37b124e122da95a

--- a/deliverables/ocata/ceilometer.yaml
+++ b/deliverables/ocata/ceilometer.yaml
@@ -36,5 +36,9 @@ releases:
       - hash: 24e72132e76d38c93875757c7a56d6c651741391
         repo: openstack/ceilometer
     version: 8.1.3
+  - projects:
+      - hash: 0e315fd30a12c7fd012d98c6ebfc2ce2fdfb9cb9
+        repo: openstack/ceilometer
+    version: 8.1.4
 repository-settings:
   openstack/ceilometer: {}
