--- a/deliverables/pike/ceilometer.yaml
+++ b/deliverables/pike/ceilometer.yaml
@@ -25,6 +25,10 @@ releases:
       - hash: f1689396845f3e551cb94d4f8e14ff0a3be884aa
         repo: openstack/ceilometer
     version: 9.0.4
+  - projects:
+      - hash: 7a3770a6de1366886e947960023c963fc7efe68b
+        repo: openstack/ceilometer
+    version: 9.0.5
 branches:
   - location: 9.0.0
     name: stable/pike
