--- a/deliverables/queens/blazar-dashboard.yaml
+++ b/deliverables/queens/blazar-dashboard.yaml
@@ -9,6 +9,10 @@ releases:
       - hash: edbd5aad834727c838325f39d798deecaac9b24c
         repo: openstack/blazar-dashboard
     version: 1.0.0
+  - projects:
+      - hash: 44fb789958ed7c2019d0b9b3749bd9c1837e3e3a
+        repo: openstack/blazar-dashboard
+    version: 1.0.1
 repository-settings:
   openstack/blazar-dashboard: {}
 branches:
