update diff-start for blazar queens final release
This is the value we used when we tagged blazar by hand.

Change-Id: I245a9a9c61caf9338bb2d10e72f03d1c4ae730e0
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/queens/blazar.yaml
+++ b/deliverables/queens/blazar.yaml
@@ -17,7 +17,7 @@ releases:
     projects:
       - repo: openstack/blazar
         hash: a72e60dc3417f7c486eb2af04a0f0b66d03eebb4
-  - diff-start: 0.2.0
+  - diff-start: 0.4.0-b1
     projects:
       - repo: openstack/blazar
         hash: a72e60dc3417f7c486eb2af04a0f0b66d03eebb4
