Update release notes link for tricircle
Change-Id: I86f5b6b3c56ef9d532a16541239fd3d185a2395d

--- a/deliverables/queens/tricircle.yaml
+++ b/deliverables/queens/tricircle.yaml
@@ -27,4 +27,5 @@ branches:
 repository-settings:
   openstack/tricircle: {}
 cycle-highlights:
-  - Basic support for LBaas and QoS in Tricircle
+  - 'Basic support for LBaas and QoS in Tricircle'
+release-notes: https://docs.openstack.org/releasenotes/tricircle/queens.html
