--- a/deliverables/queens/instack-undercloud.yaml
+++ b/deliverables/queens/instack-undercloud.yaml
@@ -17,5 +17,12 @@ releases:
       - hash: 5dd4e93f5965e133bbf988573298b6b5cb13fb0d
         repo: openstack/instack-undercloud
     version: 8.2.0
+  - projects:
+      - hash: 6ad29d2330a65d158b7ec591c2d8ffdcaaa1ff48
+        repo: openstack/instack-undercloud
+    version: 8.3.0
 repository-settings:
   openstack/instack-undercloud: {}
+branches:
+  - location: 8.3.0
+    name: stable/queens
