--- a/deliverables/queens/os-refresh-config.yaml
+++ b/deliverables/queens/os-refresh-config.yaml
@@ -17,5 +17,12 @@ releases:
       - hash: 663a24638d4b856c65d5dd693efe135452ff9df8
         repo: openstack/os-refresh-config
     version: 8.2.0
+  - projects:
+      - hash: 7ca7b19e74ba3c1fcdf93f5f4c71ab1b7b799869
+        repo: openstack/os-refresh-config
+    version: 8.3.0
 repository-settings:
   openstack/os-refresh-config: {}
+branches:
+  - location: 8.3.0
+    name: stable/queens
