--- a/deliverables/queens/tripleo-validations.yaml
+++ b/deliverables/queens/tripleo-validations.yaml
@@ -17,5 +17,12 @@ releases:
       - hash: 8b3a8eb3b393f618d7a2539a06916ffc9d46afb1
         repo: openstack/tripleo-validations
     version: 8.2.0
+  - projects:
+      - hash: 6dc1ba3c1fc6776a7232f0b6c949a7a7fa43b06f
+        repo: openstack/tripleo-validations
+    version: 8.3.0
 repository-settings:
   openstack/tripleo-validations: {}
+branches:
+  - location: 8.3.0
+    name: stable/queens
