--- a/deliverables/queens/shade.yaml
+++ b/deliverables/queens/shade.yaml
@@ -26,6 +26,10 @@ releases:
       - hash: e0e8841a6ded197dfdac08720694c04fbcc0403d
         repo: openstack-infra/shade
     version: 1.27.0
+  - projects:
+      - hash: 53f2766bdd3c82c4f0e94dd1df4b871cd11e01b5
+        repo: openstack-infra/shade
+    version: 1.27.1
 branches:
   - name: stable/queens
     location: 1.26.0
