TripleO newton release
Change-Id: I47f023086b38d51d2c5a08ebf7150dfe69cedae1

--- a/deliverables/newton/tripleo-heat-templates.yaml
+++ b/deliverables/newton/tripleo-heat-templates.yaml
@@ -83,6 +83,10 @@ releases:
       - hash: ef921db19ad64791bbf234ba4979ff705ef57b10
         repo: openstack/tripleo-heat-templates
     version: 5.3.9
+  - projects:
+      - hash: afa48621358599100cfeeab6b3008ee71a16d444
+        repo: openstack/tripleo-heat-templates
+    version: 5.3.10
 team: tripleo
 type: other
 repository-settings:
