TripleO ocata release
Change-Id: I9512db80d6074a935f371b55db889b8d261a27c5

--- a/deliverables/ocata/os-net-config.yaml
+++ b/deliverables/ocata/os-net-config.yaml
@@ -39,6 +39,10 @@ releases:
       - hash: 7c977645ab4ee4bc3ead6afbbdc8ef5cafd3a515
         repo: openstack/os-net-config
     version: 6.1.3
+  - projects:
+      - hash: 694f06c69bdffa7cae0d6cf2b7052ea3ab7a6590
+        repo: openstack/os-net-config
+    version: 6.1.4
 team: tripleo
 type: other
 repository-settings:
