--- a/deliverables/ocata/puppet-tripleo.yaml
+++ b/deliverables/ocata/puppet-tripleo.yaml
@@ -66,6 +66,10 @@ releases:
       - hash: 32903686463e3a8188ec3c2b332b52d7cc634a7e
         repo: openstack/puppet-tripleo
     version: 6.5.9
+  - projects:
+      - hash: 09a5b3171554e5b0e55548e12d10c9d7077bd014
+        repo: openstack/puppet-tripleo
+    version: 6.5.10
 team: tripleo
 type: other
 repository-settings:
