--- a/deliverables/ocata/tripleo-heat-templates.yaml
+++ b/deliverables/ocata/tripleo-heat-templates.yaml
@@ -76,6 +76,10 @@ releases:
       - hash: c8195bde70f65ca1e7f1f0edf921b352cbfced9a
         repo: openstack/tripleo-heat-templates
     version: 6.2.10
+  - projects:
+      - hash: 298599d9331365d93e4cba907ea6b8c8df722249
+        repo: openstack/tripleo-heat-templates
+    version: 6.2.11
 team: tripleo
 type: other
 repository-settings:
