TripleO pike release
Change-Id: Ifeef73babf5ae501391f50f65e9a74de4efca3bf

--- a/deliverables/pike/instack-undercloud.yaml
+++ b/deliverables/pike/instack-undercloud.yaml
@@ -66,6 +66,10 @@ releases:
       - hash: 900a198335c70566423cd2b48964d981e7ecb2e0
         repo: openstack/instack-undercloud
     version: 7.4.9
+  - projects:
+      - hash: 50217d7a93dce7fdc17c0dfbb04260f86fd3ac7d
+        repo: openstack/instack-undercloud
+    version: 7.4.10
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/instack-undercloud/pike.html
