--- a/deliverables/pike/paunch.yaml
+++ b/deliverables/pike/paunch.yaml
@@ -48,6 +48,10 @@ releases:
       - hash: 89f73d773012be28c9a4f5f6955077509624ba67
         repo: openstack/paunch
     version: 1.5.4
+  - projects:
+      - hash: 747f02fde2bbd30f227059494877d1d7399e2128
+        repo: openstack/paunch
+    version: 1.5.5
 release-notes: https://docs.openstack.org/releasenotes/paunch/pike.html
 repository-settings:
   openstack/paunch: {}
