--- a/deliverables/pike/puppet-tripleo.yaml
+++ b/deliverables/pike/puppet-tripleo.yaml
@@ -61,6 +61,10 @@ releases:
       - hash: fecece15053e4d6857647520bf9e9b28ccd6d8d6
         repo: openstack/puppet-tripleo
     version: 7.4.9
+  - projects:
+      - hash: a7e36942c6447709349e4bc5c35292a728dd4fcb
+        repo: openstack/puppet-tripleo
+    version: 7.4.10
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/puppet-tripleo/pike.html
