--- a/deliverables/pike/python-tripleoclient.yaml
+++ b/deliverables/pike/python-tripleoclient.yaml
@@ -54,6 +54,10 @@ releases:
       - hash: 4ce1e6f69b370a5096d02f54b3861670cb3f4317
         repo: openstack/python-tripleoclient
     version: 7.3.8
+  - projects:
+      - hash: 76fd6d2b23effdc202283ba5cbfb8e2764897ddb
+        repo: openstack/python-tripleoclient
+    version: 7.3.9
 team: tripleo
 type: library
 release-notes: https://docs.openstack.org/releasenotes/python-tripleoclient/pike.html
