--- a/deliverables/pike/tripleo-heat-templates.yaml
+++ b/deliverables/pike/tripleo-heat-templates.yaml
@@ -67,6 +67,10 @@ releases:
       - hash: cd984bf592e0007da657c7bf1ca18e158b8ead87
         repo: openstack/tripleo-heat-templates
     version: 7.0.9
+  - projects:
+      - hash: cf39b68506762eaafa57a515bb397c41105ac7d3
+        repo: openstack/tripleo-heat-templates
+    version: 7.0.10
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/tripleo-heat-templates/pike.html
