--- a/deliverables/pike/tripleo-puppet-elements.yaml
+++ b/deliverables/pike/tripleo-puppet-elements.yaml
@@ -51,6 +51,10 @@ releases:
       - hash: f81858672c0922fd7b40c60adf86037c4475e5b7
         repo: openstack/tripleo-puppet-elements
     version: 7.0.5
+  - projects:
+      - hash: 246581fb40e92410b73a5ecde421e3f505691954
+        repo: openstack/tripleo-puppet-elements
+    version: 7.0.6
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/tripleo-puppet-elements/pike.html
