--- a/deliverables/pike/tripleo-validations.yaml
+++ b/deliverables/pike/tripleo-validations.yaml
@@ -50,6 +50,10 @@ releases:
       - hash: e246d696db9ef72ddee50be8c4e28904b3bc7cec
         repo: openstack/tripleo-validations
     version: 7.4.6
+  - projects:
+      - hash: 602fb5f1a3cc0c922d32d4edd7e9cca0460fee72
+        repo: openstack/tripleo-validations
+    version: 7.4.7
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/tripleo-validations/pike.html
