--- a/deliverables/pike/os-net-config.yaml
+++ b/deliverables/pike/os-net-config.yaml
@@ -38,6 +38,10 @@ releases:
       - hash: 8c7dd0c014ae12de685458206a484bd4346da28d
         repo: openstack/os-net-config
     version: 7.3.3
+  - projects:
+      - hash: 4a59e793455feea8c8d807911e2dbdc2923a248f
+        repo: openstack/os-net-config
+    version: 7.3.4
 team: tripleo
 type: other
 repository-settings:
