--- a/deliverables/pike/tripleo-common.yaml
+++ b/deliverables/pike/tripleo-common.yaml
@@ -74,6 +74,10 @@ releases:
       - hash: 0b105e852d7b0e9356c5adff10a6835336f49c95
         repo: openstack/tripleo-common
     version: 7.6.9
+  - projects:
+      - hash: ab9faf954343680595c0942a34e45e135cf54808
+        repo: openstack/tripleo-common
+    version: 7.6.10
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/tripleo-common/pike.html
