--- a/deliverables/pike/tripleo-image-elements.yaml
+++ b/deliverables/pike/tripleo-image-elements.yaml
@@ -43,6 +43,10 @@ releases:
       - hash: 310d3479c73824bfc503b853fec2149362a64a0b
         repo: openstack/tripleo-image-elements
     version: 7.0.3
+  - projects:
+      - hash: a0088127e91080300f62364bc168ed39f0a43452
+        repo: openstack/tripleo-image-elements
+    version: 7.0.4
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/tripleo-image-elements/pike.html
